# peripp

./: CMakeLists.txt  CMakePresets.json  README.rst
.github/workflows/: build-and-test.yml
include/: CMakeLists.txt
include/peripp/: i2c.hpp  macros.hpp
src/: CMakeLists.txt  conanfile.txt  i2c.cpp
tests/: CMakeLists.txt  i2c.cpp
